--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,6 @@
 # See https://pre-commit.com for more information
 # See https://pre-commit.com/hooks.html for more hooks
-exclude: ".git"  # TODO - add nox files if we ever get around to implementing testing
+exclude: ".git"
 default_stages:
     - commit
 fail_fast: true
@@ -9,26 +9,7 @@ repos:
     -   repo: https://github.com/pre-commit/pre-commit-hooks
         rev: v3.2.0
         hooks:
-            -   id: check-ast
             -   id: trailing-whitespace
             -   id: end-of-file-fixer
-            -   id: check-yaml
-            -   id: check-toml
             -   id: check-merge-conflict
             -   id: check-added-large-files
-
-    -   repo: https://github.com/psf/black
-        rev: 20.8b1
-        hooks:
-            -   id: black
-
-    -   repo: https://github.com/timothycrosley/isort
-        rev: 5.6.4
-        hooks:
-            -   id: isort
-
-    -   repo: https://gitlab.com/pycqa/flake8
-        rev: 3.8.4
-        hooks:
-            -   id: flake8
-                additional_dependencies: [flake8-isort]
