--- a/{{cookiecutter.repo_name}}/.pre-commit-config.yaml
+++ b/{{cookiecutter.repo_name}}/.pre-commit-config.yaml
@@ -1,34 +1,27 @@
 # See https://pre-commit.com for more information
 # See https://pre-commit.com/hooks.html for more hooks
-exclude: ".git"  # TODO - add nox files if we ever get around to implementing testing
-default_stages:
-    - commit
-fail_fast: true
+exclude: ".git"
 
 repos:
-    -   repo: https://github.com/pre-commit/pre-commit-hooks
-        rev: v3.2.0
-        hooks:
-            -   id: check-ast
-            -   id: trailing-whitespace
-            -   id: end-of-file-fixer
-            -   id: check-yaml
-            -   id: check-toml
-            -   id: check-merge-conflict
-            -   id: check-added-large-files
+  - repo: https://github.com/charliermarsh/ruff-pre-commit
+    rev: v0.0.252
+    hooks:
+      - id: ruff
+        args: [ --fix, --exit-non-zero-on-fix ]
 
-    -   repo: https://github.com/psf/black
-        rev: 20.8b1
-        hooks:
-            -   id: black
+  - repo: https://github.com/psf/black
+    rev: 23.1.0
+    hooks:
+      - id: black
 
-    -   repo: https://github.com/timothycrosley/isort
-        rev: 5.6.4
-        hooks:
-            -   id: isort
-
-    -   repo: https://gitlab.com/pycqa/flake8
-        rev: 3.8.4
-        hooks:
-            -   id: flake8
-                additional_dependencies: [flake8-isort]
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v4.4.0
+    hooks:
+      - id: check-added-large-files
+      - id: check-ast
+      - id: check-case-conflict
+      - id: check-merge-conflict
+      - id: check-toml
+      - id: check-yaml
+      - id: end-of-file-fixer
+      - id: trailing-whitespace
