--- a/{{cookiecutter.repo_name}}/.gitignore
+++ b/{{cookiecutter.repo_name}}/.gitignore
@@ -128,9 +128,15 @@ dmypy.json
 # Pyre type checker
 .pyre/
 
+# Ruff
+.ruff_cache/
+
 # IDE caches
 .idea/
 .vscode/
 
 # Mac OS
 .DS_Store
+
+# Cache
+cache/
