--- a/{{cookiecutter.repo_name}}/pyproject.toml
+++ b/{{cookiecutter.repo_name}}/pyproject.toml
@@ -46,6 +46,10 @@ homepage = "{{cookiecutter.repo_link}}"
 repository = "{{cookiecutter.repo_link}}"
 documentation = "{{cookiecutter.repo_link}}"
 
+[tool.setuptools.packages.find]
+where = ["."]
+exclude = ["cache"]
+
 [tool.black]
 line-length = 121
 target-version = ["py38", "py39", "py310"]
@@ -54,3 +58,7 @@ preview = true
 [tool.ruff]
 line-length = 121
 target-version = "py38"
+select = ["A", "B", "C90", "E", "F", "I", "RUF", "W"]
+
+[tool.ruff.per-file-ignores]
+"__init__.py" = ["E402", "F401"]
